packaged/objects/Program_Engagement_Role__c.object
<CustomObject>
    <description>Designates the role of other contacts acting in support of a person of family engaged in a program.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Engagement Roles</relationshipLabel>
        <relationshipName>Program_Engagement_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Engagement__c</fullName>
        <label>Program Engagement</label>
        <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
        <relationshipLabel>Program Engagement Roles</relationshipLabel>
        <relationshipName>Program_Engagement_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Describes the role a person has in supporting a contact engaged in a program.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Volunteer - Grocery Shopping</fullName>
                </value>
                <value>
                    <fullName>Volunteer - Education/Schooling</fullName>
                </value>
                <value>
                    <fullName>Volunteer - Translation services</fullName>
                </value>
                <value>
                    <fullName>Volunteer - Housing</fullName>
                </value>
                <value>
                    <fullName>Volunteer - Finance &amp; Budgeting</fullName>
                </value>
                <value>
                    <fullName>Volunteer - Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Sponsoring Relative</fullName>
                </value>
                <value>
                    <fullName>Parish Pastor</fullName>
                </value>
                <value>
                    <fullName>Co-Sponsor (non-relative)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Engagement Role</label>
    <nameField>
        <displayFormat>PER-{000000}</displayFormat>
        <label>Program Engagement Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Engagement Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>